Closed Bug 578740 Opened 14 years ago Closed 14 years ago

JM: Compiler does not handle JSOP_NAMEINC, used by v8-v6.

Categories

(Core :: JavaScript Engine, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sstangl, Unassigned)

References

Details

The Richards test on v8-v6 aborts compilation due to unhandled JSOP_NAMEINC. V8-v6 is the version that users will run in-browser to measure FF4 JS perf.

All other opcodes in v8-v6 are handled.
http://hg.mozilla.org/users/danderson_mozilla.com/moo/rev/eff02554170a

Decomposes to NAME ; POS ; ONE ; ADD ; BINDNAME ; SETNAME, all of which has fast-paths.

Unfortunately the only place this op was being used was in the harness itself.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
The patch from bug 578897 exposes test failures when PICs are disabled with this patch. Without applying this patch, the bug can be deterministically reproduced by running (for me):

nice python trace-test/trace-test.py dbg32/js -o basic/testBug552248.js

With output:

/home/sean/dev/moo/js/src/trace-test/tests/basic/testBug552248.js:35: Error: Assertion failed: got ",,,,,,,,,,,,,,,", expected "5,4,3,9,5,5,4,3,5,4,3,9,5,5,4,3"

Note that if the test is not specified as an argument to trace-test.py, the test reports success.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
The failing test was removed a long time ago, and there are no known errors with PICs disabled on tip. Closing.
Status: REOPENED → RESOLVED
Closed: 14 years ago14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.