[JAEGER] Add NAMEINC; make NAMEINC ops fast (bug 578740).